syntax = "proto3";

option csharp_namespace = "GrpcService.Protocol";

package AuthApi;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayMessage (MessageRequest) returns (MessageReply);
  rpc SayMessageStream ( stream MessageRequest) returns (stream MessageReply);
}
service Auth {
  rpc Authentication(AuthRequest) returns (AuthReply);
}

service GetNode{
	rpc GetNodeInformation(NodeRequest) returns (NodeReply);
	rpc GetNodeInformationClientStream(stream NodeRequest) returns (stream NodeReply);
	rpc GetNodeInformationServerStream(NodeRequest) returns (stream NodeReply);
}

// The request message containing the user's name.
message MessageRequest {
  string name = 2;
}

// The response message containing the greetings.
message MessageReply {
  int32 num = 1;
  string message = 2;
}

message AuthRequest{
	string login = 1;
	string password = 2;
}

message AuthReply{
	string login = 1;
	string message = 2;
	bool is_true = 3;
}

message NodeRequest{}

message ConnectReply{
	bool is_connect = 1;
}

message NodeReply{
	string node_name = 1;
	bool node_value = 2;
}

